@@ -1,3 +1,7 @@
+Mon Apr  3 16:58:53 2000  Brian Gough  <bjg@network-theory.co.uk>
+
+	* params.c (main): added parentheses around negative output values
+
 Tue Mar 21 12:44:07 2000  Brian Gough  <bjg@network-theory.co.uk>
 
 	* hypot.c: added a quick gsl_hypot function for sqrt(x^2+y^2)
